--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "dayjs": "1.9.5",
-    "dayjs-random": "1.0.0"
+    "dayjs-random": "1.0.0",
+    "he": "1.2.0"
   }
 }
